FIX:ButtonWishlist and ButtonQuickView buttons flicker if the product image is not loaded but the buttons are already displayed

--- a/src/components/molecules/card/ProductCard/ProductCard.module.scss
+++ b/src/components/molecules/card/ProductCard/ProductCard.module.scss
@@ -55,13 +55,15 @@
             // width:185px;
             @extend ._imgAndSkeletonHeight;
 
-            animation: appearImg .8s ease ;
+            animation: appearImg 1s ease ;
             
             @keyframes appearImg {
                 0%{
                     opacity: 0;
+                    filter: blur(3px);
                 }100%{
                     opacity: 1;
+                    filter: blur(0px);
                 }
             }
         }
@@ -80,6 +82,7 @@
 
     ._topButtonsContainer{
         position: absolute;
+        z-index: 3;
         display: flex;
         flex-direction: column;
         right: 20px;
